# hello-wordsmith

./: .gitignore  README.md  pyproject.toml
hello_wordsmith/: query_pipeline.py  wordsmith.py
